Fix spacing; remove orange

--- a/webapp/public/custom.css
+++ b/webapp/public/custom.css
@@ -70,5 +70,5 @@
 
 .ui.dropdown,
 .ui.buttons {
-    margin-right: 0.25em;
+    margin-right: 0.25rem;
 }
